cabal-version:      >=1.10
name:               dnsext-log
version:            0.0.0.0
license-file:       LICENSE
maintainer:         ex8k.hibino@gmail.com
author:             Kei Hibino
build-type:         Simple
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        DNS.Log
    other-modules:
        DNS.Queue

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        ansi-terminal,
        fast-logger,
        unliftio,
        stm

    if impl(ghc >=8)
        default-extensions: Strict StrictData
