cabal-version:      3.0
name:               dnsext-types
version:            0.0.0
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         Kazu Yamamoto <kazu@iij.ad.jp>
author:             Kazu Yamamoto <kazu@iij.ad.jp>
tested-with:
    ghc ==8.0.2 ghc ==8.2.2 ghc ==8.4.4 ghc ==8.6.5 ghc ==8.8.1

synopsis:           Types for Extensible DNS libraries
description:
    Types for Extensible DNS libraries which are written
    purely in Haskell

category:           Network
build-type:         Simple
extra-source-files: Changelog.md

source-repository head
    type:     git
    location: git://github.com/kazu-yamamoto/dnsext.git

library
    exposed-modules:
        DNS.Types
        DNS.Types.Decode
        DNS.Types.Encode
        DNS.Types.Internal

    other-modules:
        DNS.StateBinary
        DNS.StateBinary.SGet
        DNS.StateBinary.SPut
        DNS.StateBinary.Types
        DNS.Types.Base32Hex
        DNS.Types.Dict
        DNS.Types.Domain
        DNS.Types.EDNS
        DNS.Types.Error
        DNS.Types.Imports
        DNS.Types.Message
        DNS.Types.Opaque
        DNS.Types.Parser
        DNS.Types.RData
        DNS.Types.Sec
        DNS.Types.ShortBuilder
        DNS.Types.ShortParser
        DNS.Types.Type

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        array,
        attoparsec,
        base >=4 && <5,
        base16-bytestring,
        base64-bytestring,
        bytestring,
        containers,
        cryptonite,
        hourglass,
        iproute >=1.3.2,
        mtl,
        word8

test-suite doctests
    type:             exitcode-stdio-1.0
    main-is:          doctests.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall -threaded
    build-depends:
        base,
        doctest

test-suite spec
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover
    hs-source-dirs:     test
    other-modules:
        EncodeSpec
        DecodeSpec
        RoundTripSpec

    default-language:   Haskell2010
    ghc-options:        -Wall
    build-depends:
        dnsext-types,
        QuickCheck >=2.9,
        base,
        bytestring,
        hspec,
        iproute >=1.3.2,
        word8
