cabal-version:      3.0
name:               dnsext-types
version:            0.0.0
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         Kazu Yamamoto <kazu@iij.ad.jp>
author:             Kazu Yamamoto <kazu@iij.ad.jp>
tested-with:        ghc ==8.6.5 ghc ==8.8.4 ghc ==9.0.2 ghc ==9.2.4
synopsis:           Types for Extensible DNS libraries
description:
    Types for Extensible DNS libraries which are written
    purely in Haskell

category:           Network
build-type:         Simple
extra-source-files: CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/kazu-yamamoto/dnsext

library
    exposed-modules:
        DNS.Types
        DNS.Types.Decode
        DNS.Types.Encode
        DNS.Types.Internal
        DNS.Types.Opaque
        DNS.Types.Time

    other-modules:
        DNS.StateBinary
        DNS.StateBinary.SGet
        DNS.StateBinary.SPut
        DNS.StateBinary.Types
        DNS.Types.Base32Hex
        DNS.Types.Dict
        DNS.Types.Domain
        DNS.Types.EDNS
        DNS.Types.Error
        DNS.Types.Imports
        DNS.Types.Message
        DNS.Types.Opaque.Internal
        DNS.Types.Parser
        DNS.Types.RData
        DNS.Types.Seconds
        DNS.Types.ShortBuilder
        DNS.Types.ShortParser
        DNS.Types.Type

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        array,
        base >=4 && <5,
        base16-bytestring,
        base64-bytestring,
        bytestring,
        containers,
        iproute >=1.3.2,
        mtl,
        network-byte-order,
        unix-time,
        word8

    if impl(ghc >=8)
        default-extensions: Strict StrictData

test-suite spec
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover
    hs-source-dirs:     test
    other-modules:
        EncodeSpec
        DecodeSpec
        RoundTripSpec

    default-language:   Haskell2010
    ghc-options:        -Wall
    build-depends:
        dnsext-types,
        QuickCheck >=2.9,
        base,
        bytestring,
        hspec,
        iproute >=1.3.2,
        word8
