cabal-version:      >=1.10
name:               dnsext-utils
version:            0.0.0.0
license-file:       LICENSE
maintainer:         ex8k.hibino@gmail.com, kazu@iij.ad.jp
author:             Kei Hibino and Kazu Yamamoto
build-type:         Simple
extra-source-files: CHANGELOG.md

library
    exposed-modules:  DNS.Log
                      DNS.TAP.FastStream
                      DNS.TAP.ProtocolBuffer
                      DNS.TAP.Schema
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        ansi-terminal,
        base >=4 && <5,
        base16-bytestring,
        bytestring,
        containers,
        dnsext-types,
        fast-logger,
        iproute,
        network,
        network-byte-order,
        recv,
        stm,
        unliftio

    if impl(ghc >=8)
        default-extensions: Strict StrictData

test-suite spec
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover
    hs-source-dirs:     test
    other-modules:
        FastStreamSpec
        ProtocolBufferSpec
        SchemaSpec

    default-language:   Haskell2010
    ghc-options:        -Wall -threaded
    build-depends:
        base,
        bytestring,
        dnsext-types,
        dnsext-utils,
        hspec,
        network-run,
        unliftio

    if impl(ghc >=8)
        default-extensions: Strict StrictData

