cabal-version:      >=1.10
name:               dnsext-utils
version:            0.0.0
license-file:       LICENSE
maintainer:         ex8k.hibino@gmail.com, kazu@iij.ad.jp
author:             Kei Hibino and Kazu Yamamoto
build-type:         Simple
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        DNS.Array
        DNS.Log
        DNS.TAP.FastStream
        DNS.TAP.ProtocolBuffer
        DNS.TAP.Schema
        DNS.ThreadStats
        DNS.TimeCache
        DNS.RRCache
        DNS.ZoneFile

    other-modules:
        DNS.RRCache.Managed
        DNS.RRCache.ReaperReduced
        DNS.RRCache.Types
        DNS.Utils.AutoUpdate
        DNS.ZoneFile.Types
        DNS.ZoneFile.Lexer
        DNS.ZoneFile.Parser
        DNS.ZoneFile.IO

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        ansi-terminal,
        array,
        async,
        base >=4 && <5,
        base16-bytestring,
        bytestring,
        containers,
        deepseq,
        dnsext-dnssec,
        dnsext-types,
        fast-logger,
        ghc-prim,
        iproute,
        network,
        network-byte-order,
        primitive,
        psqueues,
        recv,
        stm,
        transformers,
        unix-time,
        vector,
        word8

    if impl(ghc >=8)
        default-extensions: Strict StrictData

test-suite spec
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover
    hs-source-dirs:     test
    other-modules:
        ArraySpec
        FastStreamSpec
        ProtocolBufferSpec
        SchemaSpec

    default-language:   Haskell2010
    ghc-options:        -Wall -threaded -with-rtsopts=-N
    build-depends:
        array,
        async,
        base,
        bytestring,
        dnsext-types,
        dnsext-utils,
        hspec,
        network-run

    if impl(ghc >=8)
        default-extensions: Strict StrictData

test-suite cache-test
    type:             exitcode-stdio-1.0
    main-is:          cache.hs
    hs-source-dirs:   test
    other-modules:    CacheProp
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        bytestring,
        dnsext-types,
        dnsext-utils,
        QuickCheck,
        unix-time

    if impl(ghc >=8)
        default-extensions: Strict StrictData
